--- a/package.json
+++ b/package.json
@@ -1,9 +1,11 @@
 {
   "devDependencies": {
+    "eslint-config-coding-standard": "git+ssh://git@github.com/wix/eslint-config-coding-standard.git#v1.0.1",
     "grunt": "^0.4.5",
-    "grunt-react": "^0.12.2",
+    "grunt-contrib-watch": "^0.6.1",
     "grunt-eslint": "^16.0.0",
-    "eslint-config-coding-standard": "git+ssh://git@github.com/wix/eslint-config-coding-standard.git#v1.0.1"
+    "grunt-react": "^0.12.2",
+    "grunt-server-monitor": "^0.2.32"
   },
   "dependencies": {
     "lodash-node": "^3.10.0"
