--- a/src/package.json
+++ b/src/package.json
@@ -12,5 +12,9 @@
     "body-parser": "^1.13.2",
     "express": "^4.13.1",
     "mongoose": "^4.0.8"
+
+  },
+  "devDependencies":{
+    "grunt-contrib-watch": "~0.6.1"
   }
 }
