--- a/package.json
+++ b/package.json
@@ -2,12 +2,15 @@
   "devDependencies": {
     "eslint-config-coding-standard": "git+ssh://git@github.com/wix/eslint-config-coding-standard.git#v1.0.1",
     "grunt": "^0.4.5",
+    "grunt-babel": "^5.0.1",
     "grunt-contrib-watch": "^0.6.1",
     "grunt-eslint": "^16.0.0",
-    "grunt-react": "^0.12.2",
-    "grunt-server-monitor": "^0.2.32"
+    "grunt-react": "^0.12.2"
   },
   "dependencies": {
-    "lodash-node": "^3.10.0"
+    "lodash-node": "^3.10.0",
+    "body-parser": "^1.13.2",
+    "express": "^4.13.1",
+    "mongoose": "^4.0.8"
   }
 }
